[package]
name = "pepulo_rps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_log = "1.0.0"
itertools = "0.12.0"
leptos = { version = "0.5.4", features = ["csr"] }
leptos_server = "0.5.4"
log = "0.4.20"
num-derive = "0.4.1"
num-traits = "0.2.17"
priority-queue = "1.3.2"
rand = "0.8.5"
serde = "1.0.195"
